# JudgeCore

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: argtable3.h  cli.h  judge_config.h  judge_log.h  judge_result.h  judge_seccomp.h  judgecore.h  syscall_profiles.h
src/: cli.c  config.c  judge.c  log.c  main.c  result.c  sandbox.c  seccomp.c  syscall_profiles.c
